# chess

./: CMakeLists.txt  Chess.pro  ChessGame Design.txt  board.cpp  board.h  boardposition.cpp  boardposition.h  chessboard.cpp  chessboard.h  chessboarditem.cpp  chessboarditem.h  chessboardqgraphicsitem.cpp  chessboardqgraphicsitem.h  chessboardscene.cpp  chessboardscene.h  chessgame.cpp  chessgame.h  chesspiece.cpp  chesspiece.h  chesspieceitem.cpp  chesspieceitem.h  chesspieceqgraphicsitem.cpp  chesspieceqgraphicsitem.h  chesswidget.cpp  chesswidget.h  chesswindow.cpp  chesswindow.h  constants.h  gamestate.h  images.qrc
chess/: board.cpp  board.h  boardpos.cpp  boardpos.h  chessboarditem.h  common.h  game.cpp  game.h  move.cpp  move.h  piece.cpp  piece.h  position.cpp  position.h  state.cpp  state.h
chessapp/: CMakeLists.txt
chessmodel/: CMakeLists.txt
chessmodel/include/chessmodel/: bitboard.h  board.h  game.h  generate.h  move.h  piece.h  position.h  state.h
chessmodel/src/: bitboard.cpp  board.cpp  game.cpp  generate.cpp  position.cpp  stream.cpp
chessmodel/test/: bitboard_test.cpp  board_test.cpp  game_test.cpp  generate_legal_test.cpp  generate_test.cpp  perft.cpp  position_test.cpp  test_helper.h
tests/: board_test.cpp  boardpos_test.cpp  game_compute_move_test.cpp  game_perform_move_test.cpp  game_result_test.cpp  move_test.cpp  piece_test.cpp  position_test.cpp  state_test.cpp  test.h
ui/: abstractchessgame.cpp  abstractchessgame.h  chessboarditem.cpp  chessboarditem.h  chessboardscene.cpp  chessboardscene.h  chessengine.cpp  chessengine.h  main.cpp  (+10 more)
(+5 files in other folders)
